Fix buttons in menu on mobile.

--- a/app/globals.css
+++ b/app/globals.css
@@ -40,3 +40,12 @@ footer {
 .highlight {
   color: #FF4725;
 }
+
+/* Fix button layout in menu on mobile */
+@media screen and (max-width: 767px) {
+  .mobile-button {
+    display: block;
+    width: 100%;
+    margin-bottom: 1em; /* Adjust the value as needed */
+  }
+}
